[BUG] Fix icon alignment in dropdowns
The styling got a bit screwy when I removed margins from the default list styles

--- a/stylesheets/_dropdowns.scss
+++ b/stylesheets/_dropdowns.scss
@@ -76,6 +76,7 @@
     text-decoration: none;
 
     [class^="icon-"], [class*=" icon-"] {
+      margin: 0 5px 0 2px;
       text-align: center;
       width: 23px;
     }
